--- a/css/new-style.css
+++ b/css/new-style.css
@@ -22,6 +22,8 @@
 	.bg_and { background-color:#033491; color:#ffffff; }
 	.bg_alamas { background-color:#800000; color:#ffffff; }
 	.bg_aisotope { background-color:#D2B200; color:#333333;}
+	.bg_avantgarde { background-color:#e4007f; color:#ffffff;}
+
 
 	.fri { color:#ffa500; }
 	.sat { color:#1e90ff; }
